--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/linxiaoxiaopang/node#readme",
   "dependencies": {
+    "lodash": "^3.3.0",
     "selenium-webdriver": "^4.23.0"
   }
 }
