--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/linxiaoxiaopang/node#readme",
   "dependencies": {
     "lodash": "^3.3.0",
+    "mockjs": "^1.1.0",
     "selenium-webdriver": "^4.23.0"
   }
 }
